welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: Boolean(false) does not take parameters
def vuBiscuit:Boolean = false {
                              ^Program:11: error: Boolean does not take parameters
vuBiscuit()
         ^Program:13: error: Boolean does not take parameters
vuBiscuit()
         ^Program:15: error: Boolean does not take parameters
vuBiscuit()
         ^Program:17: error: Boolean does not take parameters
vuBiscuit()
         ^Program:19: error: Boolean does not take parameters
vuBiscuit()
         ^