welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

def vuBiscuit:Boolean = false {
	if (estSurBiscuit) {return true}
	else {return false}
}

def haveBaggle():Boolean = {

avance()
vuBiscuit()
avance()
vuBiscuit()
avance()
vuBiscuit()
avance()
vuBiscuit()
avance()
vuBiscuit()
}

